--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,10 @@
         <item name="textColorSecondary">#B3FFFFFF</item>
         <item name="dividerColor">#1FFFFFFF</item>
         <item name="iconTint">#FFFFFF</item>
+        <item name="colorControlNormal">#B3FFFFFF</item>
+        <item name="colorControlActivated">?attr/colorAccent</item>
+        <item name="colorControlHighlight">#B3FFFFFF</item>
+        <item name="android:textColorHint">#B3FFFFFF</item>
     </style>
     
     <style name="CustomPrimaryRed">
