--- a/app/src/main/res/layout/remote_config_form.xml
+++ b/app/src/main/res/layout/remote_config_form.xml
@@ -30,39 +30,54 @@
                 android:paddingTop="8dp"
                 android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/remote_name"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/remote_name_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    tools:visibility="visible"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:visibility="gone"
-                    android:textColor="?attr/textColorPrimary"
-                    android:hint="@string/remote_name_hint"
-                    tools:visibility="visible"/>
+                    android:layout_marginBottom="16dp">
+                    <EditText
+                        android:id="@+id/remote_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="?attr/textColorPrimary"
+                        android:hint="@string/remote_name_hint" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/client_id"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/client_id_input_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    tools:visibility="visible"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:textColor="?attr/textColorPrimary"
-                    android:visibility="gone"
-                    tools:visibility="visible"/>
+                    android:layout_marginBottom="16dp">
+                    <EditText
+                        android:id="@+id/client_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="?attr/textColorPrimary" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/client_secret"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/client_secret_input_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
-                    android:textColor="?attr/textColorPrimary"
-                    android:visibility="gone"
-                    tools:visibility="visible"/>
+                    tools:visibility="visible">
+                    <EditText
+                        android:id="@+id/client_secret"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="?attr/textColorPrimary" />
+                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
         </ScrollView>
