--- a/app/src/main/res/layout/fragment_config_list.xml
+++ b/app/src/main/res/layout/fragment_config_list.xml
@@ -15,11 +15,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/provider_amazon_cloud_drive"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:background="?selectableItemBackground" >
+
+                <RadioButton
+                    android:id="@+id/rb_amazon_cloud_drive"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?attr/textColorPrimary"
+                    android:text="@string/provider_amazon_cloud_drive"/>
+            </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/provider_box"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:background="?selectableItemBackground" >
