--- a/app/src/main/res/layout/remote_config_form.xml
+++ b/app/src/main/res/layout/remote_config_form.xml
@@ -79,6 +79,38 @@
                         android:textColor="?attr/textColorPrimary" />
                 </android.support.design.widget.TextInputLayout>
 
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/auth_url_input_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    tools:visibility="visible">
+                    <EditText
+                        android:id="@+id/auth_url"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="?attr/textColorPrimary" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/token_url_input_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    tools:visibility="visible">
+                    <EditText
+                        android:id="@+id/token_url"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="?attr/textColorPrimary" />
+                </android.support.design.widget.TextInputLayout>
+
             </LinearLayout>
         </ScrollView>
 
