--- a/app/src/main/res/layout/fragment_config_list.xml
+++ b/app/src/main/res/layout/fragment_config_list.xml
@@ -86,6 +86,29 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/provider_http"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:background="?selectableItemBackground" >
+
+                <RadioButton
+                    android:id="@+id/rb_http"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="?attr/textColorPrimary"
+                    android:text="@string/provider_http"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/provider_box"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
