--- a/app/src/main/res/layout-sw720dp/fragment_share_list.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_share_list.xml
@@ -16,7 +16,7 @@
         android:layout_width="600dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_above="@+id/bottom_bar" >
+        android:layout_above="@+id/move_bar" >
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
