--- a/app/src/main/res/layout/fragment_share_list.xml
+++ b/app/src/main/res/layout/fragment_share_list.xml
@@ -15,7 +15,7 @@
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_bar" >
+        android:layout_above="@+id/move_bar" >
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
