--- a/app/src/main/res/layout/remote_config_form.xml
+++ b/app/src/main/res/layout/remote_config_form.xml
@@ -337,13 +337,15 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="?attr/iconTint"
                     android:visibility="gone"
                     tools:visibility="visible">
                     <EditText
                         android:id="@+id/pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="textPassword"
                         android:textColor="?attr/textColorPrimary"
                         tools:text="Pass"/>
                     <TextView
@@ -387,6 +389,32 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <LinearLayout
+                    android:id="@+id/remote_selector"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:background="?selectableItemBackground"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    android:gravity="center_vertical"
+                    tools:visibility="visible">
+                    <TextView
+                        android:id="@+id/remote"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="?attr/textColorPrimary"
+                        tools:text="Remote or path to alias/crypt"
+                        tools:visibility="visible" />
+                    <View
+                        android:id="@+id/remote_selector_line"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="?attr/colorControlNormal"/>
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/onedrive_account_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -406,13 +434,13 @@
                     <LinearLayout
                         android:id="@+id/onedrive_personal_account_view"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="48dp"
+                        android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:background="?selectableItemBackground" >
 
-                    <RadioButton
+                        <RadioButton
                             android:id="@+id/rb_onedrive_personal_account"
-                            android:paddingBottom="8dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
@@ -424,7 +452,8 @@
                     <LinearLayout
                         android:id="@+id/onedrive_business_account_view"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="48dp"
+                        android:gravity="center_vertical"
                         android:orientation="horizontal"
                         android:background="?selectableItemBackground" >
                         <RadioButton
