Fix crash in light theme

--- a/app/src/main/res/layout/config_form_template_text_field.xml
+++ b/app/src/main/res/layout/config_form_template_text_field.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
-            android:textColor="?attr/textColorPrimary"
+            android:textColor="?attr/textColorSecondary"
             tools:text="Remote or path to alias/crypt" />
         <View
             android:id="@+id/text_view_line"
