--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -19,6 +19,9 @@
         <item name="iconTint">#4A4A4A</item>
         <item name="android:navigationBarColor">#FAFAFA</item>
         <item name="android:windowLightNavigationBar">true</item>
+        <item name="colorControlNormal">#757575</item>
+        <item name="colorControlActivated">?attr/colorAccent</item>
+        <item name="colorControlHighlight">#757575</item>
     </style>
 
     <style name="DarkTheme">
