--- a/app/src/main/res/layout/config_form_template_text_field.xml
+++ b/app/src/main/res/layout/config_form_template_text_field.xml
@@ -16,12 +16,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
             android:textColor="?attr/textColorSecondary"
             tools:text="Remote or path to alias/crypt" />
         <View
             android:id="@+id/text_view_line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
             android:background="?attr/colorControlNormal"/>
     </LinearLayout>
 </LinearLayout>
