--- a/app/src/main/res/layout/dialog_remote_dest.xml
+++ b/app/src/main/res/layout/dialog_remote_dest.xml
@@ -17,10 +17,31 @@
         android:layout_gravity="center"
         layout="@layout/empty_directory_state" />
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/dialog_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center_vertical" />
+        </LinearLayout>
+    </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_above="@+id/bottom_bar" >
 
         <LinearLayout
