--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,25 @@
         <item name="android:textColorHint">#B3FFFFFF</item>
     </style>
 
+    <style name="DarkDialogThemeFullScreen">
+        <item name="android:background">#424242</item>
+        <item name="android:textColorPrimary">#FFFFFFFF</item>
+        <item name="textColorAlertDialogListItem">#FFFFFFFF</item>
+        <item name="android:colorPrimary">?attr/colorPrimary</item>
+        <item name="android:colorAccent">?attr/colorAccent</item>
+        <item name="colorControlNormal">#B3FFFFFF</item>
+        <item name="colorControlActivated">?attr/colorAccent</item>
+        <item name="colorControlHighlight">#B3FFFFFF</item>
+        <item name="android:textColorHint">#B3FFFFFF</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
+    <style name="LightDialogThemeFullScreen" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
+
     <style name="LightTheme">
         <item name="backgroundColor">#FAFAFA</item>
         <item name="cardColor">#FFFFFF</item>
@@ -55,7 +74,7 @@
         <item name="colorControlHighlight">#B3FFFFFF</item>
         <item name="android:textColorHint">#B3FFFFFF</item>
     </style>
-    
+
     <style name="CustomPrimaryRed">
         <item name="colorPrimary">@color/colorPrimary_Red</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_Red</item>
