--- a/app/src/main/res/layout-sw720dp/remote_config_form.xml
+++ b/app/src/main/res/layout-sw720dp/remote_config_form.xml
@@ -22,7 +22,6 @@
         android:id="@+id/form"
         android:layout_width="600dp"
         android:layout_height="match_parent"
-        android:background="?attr/cardColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +34,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
+                android:id="@+id/form_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -47,6 +47,7 @@
                     android:id="@+id/remote_name_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingTop="16dp"
                     android:paddingBottom="@dimen/config_form_template"
                     android:visibility="gone"
                     tools:visibility="visible">
